# cook-book

./: Cargo.toml  README.md  docker-compose.yml  otel-collector-config.yml
examples/: quick_dev.rs
src/: ctx.rs  error.rs  lib.rs  log_request.rs  main.rs  routes_login.rs  tracing.rs
src/config/: helper.rs  mod.rs  tracing.rs
src/middle_ware/: auth.rs  mod.rs  req_stamp.rs
src/util/: mod.rs
