[package]
name = "cook-book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "cbk"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7.3", features = ["tracing"] }
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "timeout"] }
tower = { version = "0.4.13", features = ["util"] }
tower-cookies = "0.10.0"

env_logger = "0.10.1"
log = "0.4.20"

opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.1", features = ["trace", "rt-tokio"] }
tracing-opentelemetry = "0.22.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.109"
serde_with = "3"
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
lazy-regex = "3.1.0"
strum_macros = "0.25.3"
uuid = { version = "1", features = ["v4", "fast-rng"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry = "0.21.0"
time = "0.3.31"


[dev-dependencies]
anyhow = "1.0.79"
httpc-test = "0.1.1"
